--- a/molgenis/scss/molgenis/molgenis.scss
+++ b/molgenis/scss/molgenis/molgenis.scss
@@ -1,4 +1,4 @@
-@import './bootstrap';
+@import './variables';
 
 // External lib styling
 @import 'bootstrap-scss/bootstrap';
@@ -8,35 +8,7 @@
 @import 'codemirror/addon/hint/show-hint';
 @import 'codemirror/addon/dialog/dialog';
 
-
 @import './defaults';
-@import './fonts';
-
-component {
-    display: block;
-}
-
 
 // Import Vue component styling using the glob loader.
 @import '../../components/**/*.scss'; /* stylelint-disable-line */
-
-@font-face {
-    font-family: 'bebas_neueregular';
-    font-style: normal;
-    font-weight: 100;
-    src: url('/fonts/BebasNeue-Regular.ttf') format('ttf');
-}
-
-@font-face {
-    font-family: 'IBM_Plex_sans';
-    font-style: normal;
-    font-weight: 100;
-    src: url('/fonts/IBMPlexSans-Regular.ttf') format('ttf');
-}
-
-@font-face {
-    font-family: 'IBM_Plex_mono';
-    font-style: normal;
-    font-weight: 100;
-    src: url('/fonts/IBMPlexMono-Regular.ttf') format('ttf');
-}
